--- a/back_end/src/main/resources/templates/Muon_sach.html
+++ b/back_end/src/main/resources/templates/Muon_sach.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/layout1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css}"
           integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27;">
     <title>Mượn sách</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <style>
     * {
@@ -384,35 +386,57 @@
     </div>
     <div class="content_muonSach">
         <h2>Quản lý mượn sách</h2>
-        <form th:action="@{muon-sach}" method="post">
-        <label for="nhapMSV">Nhập vào mã học sinh : </label>
-        <input type="text" name="nhapMSV" id="nhapMSV">
-        <p>Thông tin học sinh : </p>
-        <textarea name="" id=""></textarea>
-        <table>
-            <thead>
-            <tr>
-                <th>STT</th>
-                <th>Mã sách</th>
-                <th>Ngày mượn</th>
-                <th>Ngày trả</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><input type="number" name="STT" id="STT1" value="1"></td>
-                <td><input type="text" name="masach" id="masach1"></td>
-                <td><input type="date" name="date_muon" id="date_muon1"></td>
-                <td><input type="date" name="date_tra" id="date_tra1"></td>
-            </tr>
+        <form th:action="@{/sach/muon-sach}" method="post">
+            <label for="nhapMSV">Nhập vào mã học sinh : </label>
+            <div th:if="${student != null}">
+            <input type="text" name="nhapMSV" class="nhapMSV" th:value="${student.getMaTK()}" required >
+            </div>
+            <div th:if="${student == null}">
+                <input type="text" name="nhapMSV" class="nhapMSV"  required>
+            </div>
+            <p style="color: red" th:if="${message != null}" th:text="${message}"></p>
+            <a onclick="loadHocSinh()" role="button" class="timKiemHocSinh btn btn-primary ">Tìm kiếm</a>
+            <script>
+                function loadHocSinh() {
+                    const maHocSinh = document.querySelector(".nhapMSV").value;
+                    if (maHocSinh === "") {
+                        alert("Vui lòng nhập mã học sinh!");
+                    }
+                    document.querySelector('.timKiemHocSinh').href = "/sach/loadHocSinh/" + maHocSinh+"--Muon_Sach";
+                }
+            </script>
+            <p>Thông tin học sinh : </p>
+            <div th:if="${student != null}">
+                <textarea name="" th:text="${student.getTenHienThi()}"></textarea>
+            </div>
+            <div th:if="${student == null}">
+                <textarea name="" id=""></textarea>
+            </div>
+            <table>
+                <thead>
+                <tr>
+                    <th>STT</th>
+                    <th>Mã sách</th>
+                    <th>Ngày mượn</th>
+                    <th>Ngày trả</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><input type="number" name="STT" id="STT1" value="1" required></td>
+                    <td><input type="text" name="masach" id="masach1" required></td>
+                    <td><input type="date" name="date_muon" id="date_muon1" required></td>
+                    <td><input type="date" name="date_tra" id="date_tra1" required></td>
+                </tr>
 
-            </tbody>
-        </table>
-        <div style="display: flex; justify-content: space-around">
-            <button onclick="addBook()">Thêm sách</button>
-            <button onclick="xacNhan()">Đồng ý</button>
-            <button onclick="datLai()">Đặt lại</button>
-        </div>
+                </tbody>
+            </table>
+            <div style="display: flex; justify-content: space-around">
+                <a role="button" class="btn btn-primary" onclick="addBook()">Thêm sách</a>
+                <button type="submit" onclick="xacNhan()">Đồng ý</button>
+                <button onclick="datLai()">Đặt lại</button>
+            </div>
+        </form>
     </div>
 </div>
 </div>
