--- a/back_end/src/main/resources/templates/Tra_sach.html
+++ b/back_end/src/main/resources/templates/Tra_sach.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%27;">
     <title>Trả sách</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <style>
     * {
@@ -383,11 +385,31 @@
             </ul>
         </div>
         <div class="content_muonSach">
-            <h2>Quản lý mượn sách</h2>
             <label for="nhapMSV">Nhập vào mã học sinh : </label>
-            <input type="text" name="nhapMSV" id="nhapMSV">
+            <div th:if="${student != null}">
+                <input type="text" name="nhapMSV" class="nhapMSV" th:value="${student.getMaTK()}" required >
+            </div>
+            <div th:if="${student == null}">
+                <input type="text" name="nhapMSV" class="nhapMSV"  required>
+            </div>
+            <p style="color: red" th:if="${message != null}" th:text="${message}"></p>
+            <a onclick="loadHocSinh()" role="button" class="timKiemHocSinh btn btn-primary ">Tìm kiếm</a>
+            <script>
+                function loadHocSinh() {
+                    const maHocSinh = document.querySelector(".nhapMSV").value;
+                    if (maHocSinh === "") {
+                        alert("Vui lòng nhập mã học sinh!");
+                    }
+                    document.querySelector('.timKiemHocSinh').href = "/sach/loadHocSinh/" + maHocSinh+"--Tra_sach";
+                }
+            </script>
             <p>Thông tin học sinh : </p>
-            <textarea name="" id=""></textarea>
+            <div th:if="${student != null}">
+                <textarea name="" th:text="${student.getTenHienThi()}"></textarea>
+            </div>
+            <div th:if="${student == null}">
+                <textarea name="" id=""></textarea>
+            </div>
             <table>
                 <thead>
                     <tr>
