--- a/back_end/src/main/resources/templates/Tra_sach.html
+++ b/back_end/src/main/resources/templates/Tra_sach.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -385,7 +385,7 @@
             </ul>
         </div>
         <div class="content_muonSach">
-            <label for="nhapMSV">Nhập vào mã học sinh : </label>
+            <label>Nhập vào mã học sinh : </label>
             <div th:if="${student != null}">
                 <input type="text" name="nhapMSV" class="nhapMSV" th:value="${student.getMaTK()}" required >
             </div>
@@ -410,7 +410,7 @@
             <div th:if="${student == null}">
                 <textarea name="" id=""></textarea>
             </div>
-            <table>
+            <table th:if="${sachMuon != null}">
                 <thead>
                     <tr>
                         <th>STT</th>
@@ -421,43 +421,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr th:each="sach, iStats : ${sachMuon}">
                         <td><input type="number" name="STT" id="STT1" value="1"></td>
-                        <td><input type="text" name="masach" id="masach1"></td>
-                        <td><input type="date" name="date_muon" id="date_muon1"></td>
-                        <td><input type="date" name="date_tra" id="date_tra1"></td>
-                        <td><button>Trả sách</button></td>
+                        <td><input type="text" name="masach" id="masach1" th:value="${sach.maSach}"></td>
+                        <td><input type="date" name="date_muon" id="date_muon1" th:value="${sach.ngayMuon}"></td>
+                        <td><input type="date" name="date_tra" id="date_tra1" th:value="${sach.ngayTra}"></td>
+                        <td><a role="button" class="btn btn-warning" onclick="return confirm('Bạn muốn trả cuốn sách này ?')" th:href="@{/sach/tra-mot-sach(maPhieu=${sach.maPhieu}, maHocSinh=${student.maTK},maSach=${sach.maSach})}">Trả sách</a></td>
                     </tr>
                     <tr>
-                        <td><input type="number" name="STT" id="STT1" value="2"></td>
-                        <td><input type="text" name="masach" id="masach1"></td>
-                        <td><input type="date" name="date_muon" id="date_muon1"></td>
-                        <td><input type="date" name="date_tra" id="date_tra1"></td>
-                        <td><button>Trả sách</button></td>
-                    </tr>
-                    <tr>
-                        <td><input type="number" name="STT" id="STT1" value="3"></td>
-                        <td><input type="text" name="masach" id="masach1"></td>
-                        <td><input type="date" name="date_muon" id="date_muon1"></td>
-                        <td><input type="date" name="date_tra" id="date_tra1"></td>
-                        <td><button>Trả sách</button></td>
-                    </tr>
-                    <tr>
-                        <td><input type="number" name="STT" id="STT1" value="4"></td>
-                        <td><input type="text" name="masach" id="masach1"></td>
-                        <td><input type="date" name="date_muon" id="date_muon1"></td>
-                        <td><input type="date" name="date_tra" id="date_tra1"></td>
-                        <td><button>Trả sách</button></td>
-                    </tr>
-                    <tr>
-                        <td><input type="number" name="STT" id="STT1" value="5"></td>
-                        <td><input type="text" name="masach" id="masach1"></td>
-                        <td><input type="date" name="date_muon" id="date_muon1"></td>
-                        <td><input type="date" name="date_tra" id="date_tra1"></td>
-                        <td><button>Trả sách</button></td>
-                    </tr>
-                    <tr>
-                        <td colspan="5"><button onclick="">Trả tất cả sách</button></td>
+                        <td colspan="5"><a role="button" class="btn btn-primary" th:href="@{/sach/tra-tat-ca-sach(maHocSinh=${student.maTK})}">Trả tất cả sách</a></td>
                     </tr>
 
                 </tbody>
