--- a/back_end/src/main/resources/templates/Danh_sach_sach.html
+++ b/back_end/src/main/resources/templates/Danh_sach_sach.html
@@ -333,6 +333,86 @@
         padding: 10px;
         box-sizing: border-box;
     }
+    * Administrator Dropdown */
+    .administrator-menu {
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 5px 15px;
+        background-color: #4466cc;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        font-size: 0.9em;
+    }
+
+    .administrator-menu:hover {
+        background-color: #3355aa;
+    }
+
+    .administrator-menu i {
+        color: white;
+        font-size: 1.2em;
+    }
+
+    .administrator-menu span {
+        color: white;
+        font-size: 1em;
+    }
+
+    .administrator-menu .fa-chevron-down {
+        font-size: 0.8em;
+    }
+
+    .dropdown-menu {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: white;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        display: none;
+        list-style: none;
+        padding: 5px 0;
+        z-index: 1000;
+        width: 150px;
+    }
+
+    .dropdown-menu li {
+        padding: 8px 15px;
+        color: #333;
+        font-size: 0.9em;
+        white-space: nowrap;
+        transition: background-color 0.3s ease;
+    }
+
+    .dropdown-menu li:hover {
+        background-color: #f1f1f1;
+    }
+
+    .dropdown-menu a {
+        text-decoration: none;
+        color: #333;
+    }
+
+    .administrator-menu:hover .dropdown-menu {
+        display: block;
+    }
+
+
+    @media (max-width: 768px) {
+        .administrator-menu span {
+            display: none;
+        }
+        .administrator-menu {
+            padding: 5px;
+        }
+        .dropdown-menu {
+            left: 0;
+        }
+    }
+
 </style>
 </head>
 
@@ -343,10 +423,16 @@
         <i class="fa-solid fa-bars"></i>
     </div>
     <div class="header_layout2">
-        <i class="fa-solid fa-circle-user"></i>
-        <p>Administrator</p>
-        <i class="fa-solid fa-chevron-down"></i>
-    </div>
+            <div class="administrator-menu">
+                <i class="fa-solid fa-circle-user"></i>
+                <span>Administrator</span>
+                <i class="fa-solid fa-chevron-down"></i>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Account</a></li>
+                    <li><a href="/auth/logout">Logout</a></li>
+                </ul>
+            </div>
+        </div>
 </header>
 <div class="tong">
     <div class="content_menu">
