--- a/back_end/src/main/resources/templates/login.html
+++ b/back_end/src/main/resources/templates/login.html
@@ -23,6 +23,8 @@
                    placeholder="Password" required>
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <a th:href="@{/auth/forgot-password}" class="btn btn-lg btn-link">Forgot password</a>
+        <a th:href="@{/auth/register}" class="btn btn-lg btn-link">Register</a>
     </form>
 </div>
 </body>
