--- a/back_end/src/main/resources/templates/register.html
+++ b/back_end/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/register.css">
+    <link rel="stylesheet" href="/css/register.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label for="username">Mã tài khoản</label>
                 <input type="text" id="username" class="form-control"  name="maTK" placeholder="Enter your username" required>
-                <span class="error-username error"></span>
+                <span style="color: red" class="error-username error" th:if="${message}" th:text="${message}"></span>
             </div>
             <div class="form-group">
                 <label>Tên Hiển Thị</label>
